# mu2edaq-downtime-logger

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  requirements-dev.txt  requirements-postgres.txt  requirements.txt  start-mu2edaq-downtime-logger.sh  stop-mu2edaq-downtime-logger.sh
.github/workflows/: ci.yml
config/: config.example.yaml  local.yaml
man/man1/: mu2edaq-bootstrap.1  mu2edaq-disk-writer.1  mu2edaq-downtime-logger.1  mu2edaq-log-writer.1  mu2edaq-soap-server.1  mu2edaq-start.1  mu2edaq-stop.1  mu2edaq-udp-broadcast.1  mu2edaq-zmq-publish.1
src/downtime_logger/: __main__.py  app.py  config.py
src/downtime_logger/core/: event.py  metric.py  plugin_loader.py  state_machine.py
src/downtime_logger/detectors/: base.py  disk_detector.py  logfile_detector.py  soap_detector.py  udp_detector.py  zeromq_detector.py
src/downtime_logger/storage/: base.py  sqlite_backend.py
src/downtime_logger/ui/: main_window.py  popup_dialog.py  status_widget.py  toggle_switch.py  tray.py
src/downtime_logger/web/: server.py  snapshot.py
tests/: conftest.py  test_config.py  test_detector_disk.py  test_detector_logfile.py  test_detector_soap.py  test_detector_udp.py  test_detector_zmq.py  test_metric.py  test_plugin_loader.py  test_state_machine.py  test_storage_sqlite.py  test_ui_smoke.py  test_web_server.py
tools/: README.md  disk_writer.py  log_writer.py  soap_server.py  udp_broadcast.py  zmq_publish.py
